--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
 body{
 background-image: url(img/fondo.png);
+
 }
 header{
     background: #F5F5F5;
+    margin: 0 0 50px 0;
+}
+header img{
+    width: 100px;
+    top: 40px;
+    left: 40px;
+    gap: 40px;
+    margin: 10px;
+}
+
+main{
+    display: flex;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.encripta{
+
 }
 
 .btn-encriptador{
+    background: #0A3871;
     width: 328px;
     height: 67px ;
-    border-radius: 24px;
-    border-top: none;
-    text-decoration: none;
-    background: #0A3871;
+    border-radius: 24px;    
+    text-align: center;
     color: #F5F5F5;
 }
 .btn-desencriptar{
@@ -23,3 +41,35 @@ header{
     background: #D8DFE8 100%;
     color: #0A3871;
 }
+
+.encriptado{
+    text-align: center;
+    padding: 200px 20px 0 0;
+    margin: 0 20px 20px 0;
+    background: #ffffff;
+    width: 350px;
+    height: 600px;
+    border-radius: 32px;
+}
+
+.title-mensaje{
+    font-weight: bold;
+    font-size: 24px;
+    color: #343A40;
+    width: 336;
+    height: 58;
+}
+
+.e-d-text{
+    color: #495057;
+    font-weight: normal;
+    font-size: 14px;
+    box-sizing: border-box; /* El ancho y el alto incluyen el contenido, el relleno y el borde */
+    border: none;
+    width: 99%; /* Ancho total de la caja */
+    height: 20%; /* Alto total de la caja */
+    padding: 0 5px 0 5px; /* Espacio entre el contenido y el borde */
+    margin:  10px ; /* Espacio entre dos cajas consecutivas */
+    background: #ffffff; /* Color de fondo del contenido */
+}
+
