Primera prueba aprobada en texto encriptar

--- a/style.css
+++ b/style.css
@@ -1,36 +1,38 @@
-body{
-background-image: url(img/fondo.png);
+body {
+    background-image: url(img/fondo.png);
 
 }
-header{
+
+header {
     min-width: 1000px;
     width: 100%;
     background: #F5F5F5;
     box-sizing: border-box;
 }
 
-.logo{
+.logo {
     padding: auto;
     margin: 5px;
     width: 70px;
 }
 
-main{
+main {
     display: flex;
     width: 950px;
     margin: 0 auto;
 }
 
-.text-ingresar{
+.text-ingresar {
     margin: 15px;
 }
 
-.text-ingresar textarea{
+.text-ingresar textarea {
     background: transparent;
 }
+
 .text-ingresar label{
     color: #0A3871;
-    font-size: 26px;
+    font-size: 32px;
     font-family: 'Inter', sans-serif;
     display: block;
     /* Para que la etiqueta ocupe todo el ancho */
@@ -38,22 +40,23 @@ main{
     /* Espacio entre la etiqueta y el área de texto */
 }
 
-.btn{
+.btn {
     display: inline-block;
     margin: 15px;
     /* Espacio entre los botones */
 }
 
 
-.btn-encriptador{
+.btn-encriptador {
     background: #0A3871;
     width: 235px;
-    height: 67px ;
-    border-radius: 24px;    
+    height: 67px;
+    border-radius: 24px;
     text-align: center;
     color: #F5F5F5;
 }
-.btn-desencriptar{
+
+.btn-desencriptar {
     width: 235px;
     height: 67px;
     border-radius: 24px;
@@ -62,7 +65,7 @@ main{
     color: #0A3871;
 }
 
-.muñeco{
+.muñeco {
     text-align: center;
     padding: 100px 1px 0 1px;
     margin: 15px 1px 20px 200px;
@@ -72,12 +75,12 @@ main{
     border-radius: 32px;
 }
 
-.img-niño{
+.img-niño {
     width: 200px;
     margin: 40px;
 }
 
-.title-mensaje{
+.title-mensaje {
     text-align: center;
     font-weight: bold;
     font-size: 24px;
@@ -86,25 +89,31 @@ main{
     height: 58;
 }
 
-.e-d-text{
+.e-d-text {
     text-align: center;
     color: #495057;
     font-size: 11px;
-    box-sizing: border-box; /* El ancho y el alto incluyen el contenido, el relleno y el borde */
+    box-sizing: border-box;
+    /* El ancho y el alto incluyen el contenido, el relleno y el borde */
     border: none;
-    width: 95%; /* Ancho total de la caja */
-    height: 20%; /* Alto total de la caja */
-    padding: 0 5px 0 5px; /* Espacio entre el contenido y el borde */
-    margin:  10px ; /* Espacio entre dos cajas consecutivas */
-    background: #ffffff; /* Color de fondo del contenido */
+    width: 95%;
+    /* Ancho total de la caja */
+    height: 20%;
+    /* Alto total de la caja */
+    padding: 0 5px 0 5px;
+    /* Espacio entre el contenido y el borde */
+    margin: 10px;
+    /* Espacio entre dos cajas consecutivas */
+    background: #ffffff;
+    /* Color de fondo del contenido */
 }
 
-footer{
-    background: #F5F5F5 ;
+footer {
+    background: #F5F5F5;
     text-align: center;
 }
 
-footer img{
+footer img {
     margin: 10px;
     width: 30px;
 }
