--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ main {
     color: #0A3871;
 }
 
+#copiar{
+    
+}
+
 #muñeco {
     text-align: center;
     padding: 100px 1px 0 1px;
@@ -105,6 +109,9 @@ main {
     /* Espacio entre dos cajas consecutivas */
     background: #ffffff;
     /* Color de fondo del contenido */
+}
+#copiar{
+    display: none;
 }
 
 footer {
