--- a/style.css
+++ b/style.css
@@ -1,51 +1,67 @@
-body {
+
+body{
     background-image: url(img/fondo.png);
 
 }
 
 header {
-    min-width: 1000px;
     width: 100%;
     background: #F5F5F5;
     box-sizing: border-box;
 }
 
 .logo {
-    padding: auto;
-    margin: 5px;
-    width: 70px;
+    padding: 1%;
+    margin-left: 10px;
+    width: 10%;
+
 }
 
 main {
+    /*caja flexibles*/
     display: flex;
-    width: 950px;
-    margin: 0 auto;
+    margin-bottom: 50px;
+    margin-left: 80px;
 }
 
-.text-ingresar {
-    margin: 15px;
-}
-
-.text-ingresar textarea {
-    background: transparent;
-}
-
-.text-ingresar label{
-    color: #0A3871;
-    font-size: 32px;
+textarea {
     font-family: 'Inter', sans-serif;
-    display: block;
-    /* Para que la etiqueta ocupe todo el ancho */
-    margin-bottom: 20px;
-    /* Espacio entre la etiqueta y el área de texto */
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 48px;
+    border: none;
+    background: transparent;
+    margin-top: 90px;
+}
+
+::placeholder{
+    color: #0A3871;
+}
+#ingresarDesEncriptado:focus{
+    outline: none;
+}
+
+.mensaje{
+    background: white;
+    background-image: url(img/muñeco.png);
+    background-repeat: no-repeat;
+    border-radius: 24px;
+    color: #0A3871;
+    margin-left: 98px;
+    padding-top: 20px;
+    position: fixed;
+}
+
+.mensaje:focus{
+    outline: none;
 }
 
 .btn {
+    margin: 2% 2% 0 0;
     display: inline-block;
-    margin: 15px;
+
     /* Espacio entre los botones */
 }
-
 
 .btn-encriptador {
     background: #0A3871;
@@ -65,16 +81,13 @@ main {
     color: #0A3871;
 }
 
-#copiar{
-    
-}
-
-#muñeco {
+.muñeco {
     text-align: center;
     padding: 100px 1px 0 1px;
     margin: 15px 1px 20px 200px;
     background: #ffffff;
     width: 350px;
+    height: 450px;
     border-radius: 32px;
 }
 
@@ -109,9 +122,6 @@ main {
     /* Espacio entre dos cajas consecutivas */
     background: #ffffff;
     /* Color de fondo del contenido */
-}
-#copiar{
-    display: none;
 }
 
 footer {
