--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
     background-image: url(img/fondo.png);
 
+
 }
 
 header {
@@ -42,16 +43,29 @@ main {
     outline: none;
 }
 
-.mensaje{
+.chico{
+    display: block;
+    text-align: center;
+    margin: 1%;
+    padding: 1%;
+    width: 350px;
     background: white;
-    background-image: url('img/muñeco.png');
+    border: none;
+    border-radius: 24px;
+}
+
+.chico img{
+    padding-top:30% ;
+}
+
+.mensaje{
     background-repeat: no-repeat;
     border: none;
     border-radius: 24px;
     color: #0A3871;
-    margin-left: 98px;
-    margin-top: 20px;
-    padding-top: 20px;
+    margin-left: 9px;
+    margin-top: 1%;
+    padding: 1%;
 }
 
 .mensaje:focus{
@@ -92,8 +106,7 @@ main {
     color: #0A3871;
     cursor: pointer;
     height: 67px;
-    margin-left: 100px;
-    width: 336px;
+    width: 235px;
 }
 footer {
     background: #F5F5F5;
