--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
     margin-left: 80px;
 }
 
-.ingresar {
+.ingresar{
     color: #0A3871;
     font-family: 'Inter', sans-serif;
     font-size: 32px;
@@ -101,12 +101,14 @@ main {
 
 .copiar{
     display: none;
+    text-align: center;
     border: 1px solid #0A3871;
     border-radius: 24px;
     color: #0A3871;
     cursor: pointer;
     height: 67px;
     width: 235px;
+    margin-left: 20%;
 }
 footer {
     background: #F5F5F5;
