--- a/style.css
+++ b/style.css
@@ -237,7 +237,89 @@ footer img {
 }
 
 @media screen and (max-width:768px){
-    main{
+
+    header {
+        width: 104%;
+        background: #F5F5F5;
+        text-align: center;
+    
+    }
+    
+    .logo {
+        padding: 2%;
+        width: 20%;
+    }
+    
+    main {
         display: block;
+        text-align: center;
+        width: 98%;
+        margin: 0;
+    }
+    
+    .ingresar {
+        margin: 0px;
+        width: 100%;
+        height: 250px;
+    }
+    
+    .terminosCondiciones {
+        text-align: start;
+        width: 90%;
+        margin-top: 50px;
+        padding: 0px;
+    }
+    
+    .btn {
+        display: flex;
+        width: 99%;
+        text-align: center;
+    }
+    
+    .btn-encriptador,    .btn-desencriptar {
+        width: 80%;
+        margin-left: 15px;
+        margin: 5px;
+    
+    }
+    
+    .chico {
+        width: 90%;
+        height: 10px;
+        margin: 30px 1px;
+        margin-left: 30px;
+        padding: 1px 5px;
+        border-radius: 32px;
+        background: white;
+        height: 30%;
+    }
+    
+    #muñeco {
+        display: flex;
+        background: transparent;
+    }
+    
+    .chico img {
+        display: none;
+    }
+    
+    #mensaje {
+        width: 99%;
+        height: 15%;
+        padding: 0 60px;
+        background: transparent;
+    }
+    #mensaje::placeholder{
+        font-family: 'Inter', sans-serif;
+        font-size: 16px;            text-align: center;
+        line-height: 100px;
+    }
+    
+    .copiar {
+        margin: 1px 2px 20px 215px;
+    }
+    
+    footer {
+        width: 104%;
     }
 }
